[tool.poetry]
name = "blendit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blendit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
mergekit = {git = "https://github.com/cg123/mergekit", tag = "v0.0.4"}

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
